# arms_fda_module

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  FinalSubmission.ipynb  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/arms_fda_module/: __init__.py  arms_fda_module.py
tests/: __init__.py  test_arms_fda_module.py
