[tool.poetry]
name = "arms_fda_module"
version = "0.1.0"
description = "Python Package to interact with the FDA's ARMS API."
authors = ["Usha Nimishakavi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
pandas = "^1.5.2"
requests = "^2.28.1"
regex = "^2022.10.31"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
statsmodels = "^0.13.5"
seaborn = "^0.12.1"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
